# AsensingViewer

./: .gitignore  .gitmodules  A2-source.py  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  NewColorPreset.json  README.md  TODO.md  pack.iss  version.txt
Plugins/AsensingPlugin/Plugin/AsensingLidar/: CMakeLists.txt  vtk.module
Plugins/AsensingPlugin/Plugin/AsensingLidar/AsensingPacketInterpreter/: A0PacketFormat.h  A0PacketInterpreter.xml  A2PacketFormat.h  A2PacketInterpreter.xml  Asensing5PacketFormat.h  Asensing5PacketInterpreter.xml  AsensingPacketFormat.h  AsensingPacketInterpreter.xml  RV_PointCloud.h  laser_ts.h  vtkA0PacketInterpreter.cxx  vtkA0PacketInterpreter.h  vtkA2PacketInterpreter.cxx  vtkA2PacketInterpreter.h  vtkAsensing5PacketInterpreter.cxx  vtkAsensing5PacketInterpreter.h  vtkAsensingPacketInterpreter.cxx  vtkAsensingPacketInterpreter.h
Plugins/AsensingPlugin/Plugin/AsensingLidar/CalibrationFiles/: A0-Correction-5.json  A0-Correction.json  A2-Correction.json  No-Correction-5.json  No-Correction.json  RT-Matrix.json  RTs.json  reflected_ray_dst_20220916.json
Superbuild/lidarview-superbuild/: CMakeLists.txt  Readme.md  versions.cmake
Superbuild/lidarview-superbuild/CMake/bundle/: LidarviewBundleCommon.cmake
Superbuild/lidarview-superbuild/CMake/bundle/apple/: LidarviewBundle.cmake
Superbuild/lidarview-superbuild/CMake/bundle/unix/: LidarviewBundle.cmake
Superbuild/lidarview-superbuild/CMake/bundle/win32/: LidarviewBundle.cmake
Superbuild/lidarview-superbuild/Projects/: ceres.cmake  eigen.cmake  flann.cmake  g2o.cmake  getdate.cmake  glog.cmake  liblas.cmake  nanoflann.cmake  opencv.cmake  paraview.cmake  pcl.cmake  pythonqt.cmake  qhull.cmake  yaml.cmake
Superbuild/lidarview-superbuild/Projects/patches/: pcl-msvc2015-compatibility.patch
Superbuild/lidarview-superbuild/Projects/scripts/: opencv.copylibs.cmake
Superbuild/lidarview-superbuild/Projects/unix/: install_dependencies.cmake
Superbuild/lidarview-superbuild/common-superbuild/: .gitlab-ci.yml  CMakeLists.txt  README.md  versions.cmake
Superbuild/lidarview-superbuild/common-superbuild/.gitlab/: artifacts.yml  os-linux.yml  os-macos.yml  os-windows.yml  rules.yml
Superbuild/lidarview-superbuild/common-superbuild/.gitlab/ci/: cdash-groups.json  configure_common.cmake  configure_macos_arm64.cmake  configure_macos_x86_64.cmake  configure_windows.cmake  ctest_build.cmake  ctest_configure.cmake  ctest_test.cmake  gitlab_ci.cmake
Superbuild/lidarview-superbuild/common-superbuild/cmake/: CTestCustom.cmake.in  CTestTestfile.cmake.in  SuperbuildCrossMacros.cmake  SuperbuildExternalProject.cmake  SuperbuildInstallMacros-apple.cmake  SuperbuildInstallMacros-unix.cmake  SuperbuildInstallMacros-win32.cmake  SuperbuildInstallMacros.cmake  SuperbuildMacros.cmake  SuperbuildPackageMacros.cmake  SuperbuildPluginMacros.cmake  SuperbuildRevisionMacros.cmake  SuperbuildTestingMacros.cmake  SuperbuildUserVariables.md  SuperbuildUtils-apple.cmake  SuperbuildUtils-unix.cmake  SuperbuildUtils.cmake  SuperbuildVariables.md  SuperbuildVersionMacros.cmake  superbuild_handle_environment.cmake.in  superbuild_package_cmakelists.cmake.in  superbuild_testing_trampoline.cmake.in
Superbuild/lidarview-superbuild/common-superbuild/cmake/patches/: ExternalProject.cmake
Superbuild/lidarview-superbuild/common-superbuild/cmake/scripts/: extract_test.cmake  fixup_bundle.apple.py  fixup_bundle.unix.py  fixup_bundle.windows.py  fixup_python.apple.cmake  fixup_python.unix.cmake  fixup_python.windows.cmake  package_test.cmake
Superbuild/lidarview-superbuild/common-superbuild/projects/: boost.common.cmake  boost.system.cmake  bzip2.cmake  bzip2.system.cmake  cxx11.cmake  fortran.cmake  freetype.cmake  freetype.system.cmake  hdf5.cmake  hdf5.system.cmake  hdf5cpp.cmake  lapack.cmake  lapack.system.cmake  libjpegturbo.cmake  matplotlib.cmake  matplotlib.system.cmake  meson.cmake  mpi.system.cmake  netcdf.cmake  netcdf.system.cmake  nlohmannjson.cmake  numpy.cmake  numpy.system.cmake  openssl.common.cmake  png.cmake  png.system.cmake  pybind11.cmake  python3.cmake  python3.functions.cmake  python3.system.cmake  pythonaiohttp.cmake  pythonasynctimeout.cmake  pythonattrs.cmake  pythonautobahn.cmake  pythonbeniget.cmake  pythoncffi.cmake  pythonchardet.cmake  pythonconstantly.cmake  pythoncppy.cmake  pythoncryptography.cmake  (+42 more)
Superbuild/lidarview-superbuild/common-superbuild/projects/apple/: bzip2.cmake  cxx11.cmake
Superbuild/lidarview-superbuild/common-superbuild/projects/apple-unix/: boost.cmake  ffi.cmake  ffmpeg.cmake  fontconfig.cmake  gperf.cmake  libxml2.cmake  libxml2.system.cmake  mpi.cmake  openssl.cmake  openssl.system.cmake  pkgconf.cmake  pkgconf.system.cmake  python3.cmake  scipy.cmake  sqlite.cmake  szip.cmake
Superbuild/lidarview-superbuild/common-superbuild/projects/patches/: freetype-pkgconfig-cmake-fix-prep.patch  freetype-pkgconfig-cmake-fix.patch  hdf5-fix-ext-pkg-find.patch  lapack-macosx-target-forward.patch  libjpegturbo-msvc-default-lib-flags.patch  matplotlib-no-certifi.patch  matplotlib.setup.cfg.in  netcdf-fix-size-uchar.patch  pythonpythran-no-pytest.patch  qhull-apple-install-name-dir.patch  qt5-missing-includes.patch
Superbuild/lidarview-superbuild/common-superbuild/projects/scripts/: cxx11.cxx  matplotlib.patch.cmake  meson.postinstall.cmake
Superbuild/lidarview-superbuild/common-superbuild/projects/unix/: llvm.cmake  mesa.common.cmake  qt5.cmake  utillinux.cmake
Superbuild/lidarview-superbuild/common-superbuild/projects/win32/: boost.cmake  hdf5.cmake  mpi.cmake  netcdf.cmake  openssl.cmake  python3.cmake  pywin32.cmake  qt5.cmake  qt5.package.cmake  qt5.system.cmake  szip.cmake
Superbuild/lidarview-superbuild/common-superbuild/selftest/: CMakeLists.txt  CTestConfig.cmake
Superbuild/lidarview-superbuild/common-superbuild/selftest/tests/: CMakeLists.txt  _windows_dll_fix.py  accelerate-check.cmake  (+3 more)
Superbuild/lidarview-superbuild/common-superbuild/standalone-boost/: CMakeLists.txt
Superbuild/lidarview-superbuild/common-superbuild/standalone-qt/: CMakeLists.txt  README.md
(+82 files in other folders)
